[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/enemies/bullet/EnemyBullet.gd" type="Script" id=1]
[ext_resource path="res://entities/_shared/Bullet.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="EnemyBullet" type="Area2D" groups=[
"enemy_projectile",
]]
collision_layer = 16
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]

[node name="GeometryPasser" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="timeout" from="GeometryPasser" to="." method="_on_GeometryPasser_timeout"]
